# plategig

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
plategig/: __init__.py  plategig.py
projects/241011_Adam/data/: ODFinal.xlsx  PlateInfo.xlsx
projects/241011_Adam/figures/: IC50 estimations.csv
projects/241011_Adam/spreadsheets_out/: growth_features.xlsx
projects/241015_Fatma/: 20241015_Fatma.ipynb
projects/241015_Fatma/data/figures/: 20241015_MIC_CTXM15_AMP IC50 estimations.csv  20241015_MIC_CTXM15_AZT IC50 estimations.csv  20241015_MIC_CTXM15_CEFE IC50 estimations.csv  20241015_MIC_CTXM15_CEFT IC50 estimations.csv
projects/241015_Fatma/data/raw/: 20241015_MIC_CTXM15_AMP.ufpf.xlsx  20241015_MIC_CTXM15_AZT.ufpf.xlsx  20241015_MIC_CTXM15_CEFE.ufpf.xlsx  20241015_MIC_CTXM15_CEFT.ufpf.xlsx
projects/Tested_Variants_MIC_Estimations/data/: ODFinal_250508_250510_250407.xlsx  ODFinal_250516_250520_250407.xlsx  PlateInfo_250508_250510_250407.xlsx  PlateInfo_250516_250520_250407.xlsx
