[project]
name = "plategig"
version = "0.1.0"
description = "plate reader magic"
authors = [{name="Muhammed Sadik Yildiz", email="msadikyildiz@gmail.com"}]
license = "MIT"
requires-python = ">= 3.12"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["plategig"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.dependencies]
polars = "*"
jupyter = "*"
ipykernel = "*"
pip = "*"
seaborn = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"
tqdm = "*"
scipy = "*"
statsmodels = "*"
openpyxl = "*"
xlsxwriter = "*"
altair-all = "*"
scikit-learn = "*"

[tool.pixi.pypi-dependencies]
plategig = { path = ".", editable = true }

[tool.pixi.tasks]
